--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gabriel Paiaro</title>
+<link rel="stylesheet" href="css/style-index.css">
 <style>
     body {
         font-family: Arial, sans-serif;
