--- a/index.html
+++ b/index.html
@@ -3,40 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gabriel Paiaro</title>
+<title>Gabriel Paiaro Rosa</title>
 <link rel="stylesheet" href="css/style-index.css">
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f7f7f7;
-    }
-    .container {
-        max-width: 800px;
-        margin: 50px auto;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    h1, h2 {
-        color: #333;
-    }
-    p {
-        line-height: 1.6;
-    }
-    .section {
-        margin-bottom: 20px;
-    }
-    .section h2 {
-        border-bottom: 2px solid #333;
-        padding-bottom: 5px;
-    }
-    .section ul {
-        list-style-type: disc;
-        padding-left: 20px;
-    }
+
 </style>
 </head>
 <body>
