--- a/teste.html
+++ b/teste.html
@@ -10,12 +10,9 @@
 
 <body>
     <header class="limitador">
-        <h1><a href="index.html">simplicity</a></h1>
+        <h1><a href="index.html">Gabriel Paiaro Rosa</a></h1>
     </header>
     <main>
-        <!-- article = artigo (conteudo de alta relevancia, primeiro nivel)
-aside = complementar, conteudo a mais (redes sociais e afins.)
-section = seção (conteudo relevante, segundo nivel)-->
 
         <article class="destaque">
             <h2>HTML & CSS & JS</h2>
