--- a/teste.html
+++ b/teste.html
@@ -14,57 +14,6 @@
     </header>
     <main>
 
-        <article class="destaque">
-            <h2>HTML & CSS & JS</h2>
-            <p>Porta de entrada para o desenvolvimento web.</p>
-        </article>
-
-        <article class="front-end limitador">
-            <h2>desenvolvimento Front-end</h2>
-            <p>O desenvolvedor Front-End é o profissional que cuida da parte do código que é interpretada diretamente
-                pelo
-                navegador.</p>
-            <p>No desenvolvimento por camadas, HTML é o responsável pela marcação de conteúdo, o CSS cuida do estilo
-                visual
-                e o JavaScript é o responsável pelo comportamento.</p>
-
-            <figure>
-                <img src="imagens/tecnologias.png" alt="imagem representativa das linguagens: HTML, CSS e JavaScript">
-            </figure>
-        </article>
-
-        <article class="historia">
-            <h2>História da internet</h2>
-            <!-- colocando video (pontuais)
-        video src="nomeDovideo.mp4 controls" -->
-            <iframe height="315" src="https://www.youtube.com/embed/jlkvzcG1UMk?si=KHMmN1wZm45PqpmA"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </article>
-
-        <article class="localizacao">
-
-            <h2>Venha nos visitar</h2>
-
-            <address>
-
-                Rua Francisco coimbra, 403 - penha - São Paulo-SP
-                <br>
-                Telefone: <a href="tel:11944395932">(11)94439-5932</a>
-                <br>
-                E-mail: <a href="mailto:penha@sp.senac.br">penha@sp.senac.br</a>
-
-            </address>
-
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.1757655035995!2d-46.542830125751735!3d-23.52617986029854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5e45de28bb23%3A0x1d2ed3122aae28a7!2sSenac%20Penha!5e0!3m2!1spt-BR!2sbr!4v1711131412835!5m2!1spt-BR!2sbr"
-                height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </article>
     </main>
-    <footer>
-        <!-- "<time>" -->
-        <p>Programação web &copy; - <time>2024</time> </p>
-
-    </footer>
+   </body>
+   </html>
