--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
 <div class="container">
     <header>
-        <h1>Seu Nome</h1>
+        <h1>Gabriel Paiaro Rosa</h1>
         <p>Cargo Desejado</p>
     </header>
+    
 
     <section class="section">
         <h2>Experiência Profissional</h2>
