--- a/index.html
+++ b/index.html
@@ -1,50 +1,102 @@
 <!DOCTYPE html>
+
 <html lang="pt-br">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gabriel Paiaro Rosa</title>
+
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Gabriel Paiaro Rosa</title>
+
 <link rel="stylesheet" href="css/style-index.css">
-<style>
 
-</style>
 </head>
+
 <body>
-<div class="container">
-    <header>
+
+    <div class="container">
+
+        <div class="img-container">
+
+            <img src="https://example.com/image.jpg" alt="Gabriel Paiaro Rosa">
+
+        </div>
+
         <h1>Gabriel Paiaro Rosa</h1>
-        <p>Cargo Desejado</p>
-    </header>
-    
 
-    <section class="section">
-        <h2>Experiência Profissional</h2>
-        <p><strong>Empresa ABC</strong> - Cargo: Analista de Dados (2019-2022)</p>
-        <ul>
-            <li>Responsável pela análise de dados e geração de relatórios para tomada de decisão.</li>
-            <li>Implementação de soluções de Business Intelligence.</li>
-        </ul>
-    </section>
+        <p class="italic">Frontend Developer</p>
 
-    <section class="section">
-        <h2>Educação</h2>
-        <p><strong>Universidade XYZ</strong> - Bacharelado em Ciência da Computação (2015-2019)</p>
-    </section>
+        <div class="main-content">
 
-    <section class="section">
-        <h2>Cursos</h2>
-        <p><strong>Curso de Data Science</strong> - Coursera (2020)</p>
-        <p><strong>Curso de Web Development</strong> - Udemy (2021)</p>
-    </section>
+            <div class="main-left">
 
-    <section class="section">
-        <h2>Trabalho Voluntário</h2>
-        <p><strong>Instituição de Caridade XYZ</strong> - Voluntário (2018-2020)</p>
-        <ul>
-            <li>Participação em campanhas de arrecadação de fundos.</li>
-            <li>Auxílio na organização de eventos beneficentes.</li>
-        </ul>
-    </section>
-</div>
+                <h2>Experiência profissional</h2>
+
+                <p>
+
+                    <span class="bold">Frontend Developer | XYZ Company</span> <br>
+
+                    Jan 2020 - Presente <br>
+
+                    Desenvolvimento de interfaces de usuário para aplicativos web e móveis utilizando HTML, CSS, JavaScript, React e outras tecnologias.
+
+                </p>
+
+                <h2>Educação</h2>
+
+                <p>
+
+                    <span class="bold">Bacharelado em Ciência da Computação</span> <br>
+
+                    Universidade Federal de ABC <br>
+
+                    2016 - 2020
+
+                </p>
+
+                <h2>Cursos</h2>
+
+                <ul>
+
+                    <li><span class="bold">Curso de JavaScript avançado</span> <br> Escola Online <br> 2021</li>
+
+                    <li><span class="bold">Curso de React Native</span> <br> Escola Online <br> 2020</li>
+
+                </ul>
+
+            </div>
+
+            <div class="main-right">
+
+                <h2>Trabalhos de voluntariado</h2>
+
+                <p>
+
+                    <span class="bold">Mentor de programação</span> <br>
+
+                    Organização de TI sem fins lucrativos <br>
+
+                    2018 - 2019
+
+                </p>
+
+                <h2>Habilidades</h2>
+
+                <p>HTML, CSS, JavaScript, React, Node.js, Git, GitHub, Figma, Design responsivo</p>
+
+                <h2>Idiomas</h2>
+
+                <p>Português (nativo) <br> Inglês (intermediário)</p>
+
+            </div>
+
+        </div>
+
+    </div>
+
 </body>
+
 </html>
+
