img perfil atualizada

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="img-container">
 
-            <img src="https://example.com/image.jpg" alt="Gabriel Paiaro Rosa">
+            <img src="imagens/perfil.jpeg" alt="Gabriel Paiaro Rosa">
 
         </div>
 
