--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="main-content">
 
-            <div class="main-left">
+            <div class="conteudo-esquerda">
 
                 <h2>Experiência profissional</h2>
 
@@ -68,7 +68,7 @@
 
             </div>
 
-            <div class="main-right">
+            <div class="conteudo-direita">
 
                 <h2>Trabalhos de voluntariado</h2>
 
