imagem redonda usando borderradius

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <p class="italic">Frontend Developer</p>
 
-        <div class="main-content">
+        <div class="principal">
 
             <div class="conteudo-esquerda">
 
