--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="container">
-
+<header>
         <div class="img-container">
 
             <img src="imagens/perfil.jpeg" alt="Gabriel Paiaro Rosa">
@@ -27,7 +27,7 @@
         <h1>Gabriel Paiaro Rosa</h1>
 
         <p class="italic">Frontend Developer</p>
-
+    </header>
         <div class="principal">
 
             <div class="conteudo-esquerda">
