ajustes no cabeçalho, reduzindo o tamanho

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>Gabriel Paiaro Rosa</title>
 
 <link rel="stylesheet" href="css/style-index.css">
-
+<style>
+</style>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
 
         <h1>Gabriel Paiaro Rosa</h1>
 
-        <p class="italic">Frontend Developer</p>
+        <p class="italic">Front-end Developer</p>
     </header>
         <div class="principal">
 
