--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 
                 <h2>Experiência profissional</h2>
 
-                <p>
-
-                    <span class="bold">Frontend Developer | XYZ Company</span> <br>
+                <p><span class="bold">Frontend Developer | XYZ Company</span> <br>
 
                     Jan 2020 - Presente <br>
 
