ajustado texto dos <p>

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
                 <h2>Experiência profissional</h2>
 
-                <p><span class="bold">Frontend Developer | XYZ Company</span> <br>
+                <p><span class="bold">Técnico em manutenção de equipamentos de imformática</span> <br>
 
-                    Jan 2020 - Presente <br>
+                    Out - 2021 / Ago - 2023 <br>
 
-                    Desenvolvimento de interfaces de usuário para aplicativos web e móveis utilizando HTML, CSS, JavaScript, React e outras tecnologias.
+                    Responsável pela de manutenção de servidores e computadores. Instalação de software até a substituição de hardware e otimização de sistemas.
 
                 </p>
 
@@ -45,21 +45,18 @@
 
                 <p>
 
-                    <span class="bold">Bacharelado em Ciência da Computação</span> <br>
+                    <span class="bold">Ensino médio</span> <br>
 
-                    Universidade Federal de ABC <br>
+                    E.E. Professora Ivone da Silva de Oliveira <br>
 
-                    2016 - 2020
-
-                </p>
-
+                     Concluído - 2014
                 <h2>Cursos</h2>
 
                 <ul>
+                    <li><span class="bold">Analíse e desenvolvimento de sistemas</span> <br> Etec - Poá <br>2016</li>
+                    <li><span class="bold">Programação Web</span> <br>  Senac - Penha <br>2024</li>
+                    <li><span class="bold">Photoshop (básico)</span> <br>  Senac - Penha <br>2024</li>
 
-                    <li><span class="bold">Curso de JavaScript avançado</span> <br> Escola Online <br> 2021</li>
-
-                    <li><span class="bold">Curso de React Native</span> <br> Escola Online <br> 2020</li>
 
                 </ul>
 
@@ -71,21 +68,21 @@
 
                 <p>
 
-                    <span class="bold">Mentor de programação</span> <br>
+                    <span class="bold">Professor de Muay Thai para crianças</span> <br>
 
-                    Organização de TI sem fins lucrativos <br>
+                    Atados.org <br>
 
-                    2018 - 2019
+                    2016 - 2017
 
                 </p>
 
                 <h2>Habilidades</h2>
 
-                <p>HTML, CSS, JavaScript, React, Node.js, Git, GitHub, Figma, Design responsivo</p>
+                <p>HTML, CSS, JavaScript, Git, GitHub, Figma, Design responsivo,VsCode,VisualStudio.</p>
 
                 <h2>Idiomas</h2>
 
-                <p>Português (nativo) <br> Inglês (intermediário)</p>
+                <p>Português (nativo) <br> Inglês (avançado)</p>
 
             </div>
 
