--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                 <h2>Idiomas</h2>
 
-                <p>Português (nativo) <br> Inglês (avançado)</p>
+                <p>Português (nativo). <br> Inglês (avançado).</p>
 
             </div>
 
