--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Responsável pela de manutenção de servidores e computadores. Instalação de software até a substituição de hardware e otimização de sistemas.
 
                 </p>
-
+<hr>
                 <h2>Educação</h2>
 
                 <p>
@@ -49,7 +49,8 @@
 
                     E.E. Professora Ivone da Silva de Oliveira <br>
 
-                     Concluído - 2014
+                     Concluído - 2014</p>
+                     <hr>
                 <h2>Cursos</h2>
 
                 <ul>
@@ -75,14 +76,17 @@
                     2016 - 2017
 
                 </p>
+                <hr>
 
                 <h2>Habilidades</h2>
 
                 <p>HTML, CSS, JavaScript, Git, GitHub, Figma, Design responsivo,VsCode,VisualStudio.</p>
+                <hr>
 
                 <h2>Idiomas</h2>
 
                 <p>Português (nativo). <br> Inglês (avançado).</p>
+                <hr>
 
             </div>
 
