--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
 
                 <p>Português (nativo). <br> Inglês (avançado).</p>
                 <hr>
+                <h2>Habilidades</h2>
+
+                <p>HTML, CSS, JavaScript, Git, GitHub, Figma, Design responsivo,VsCode,VisualStudio.</p>
+                
+
+                <h2>Contato</h2>
+
+                <p></p>
 
             </div>
 
