--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 
                 <h2>Contato</h2>
 
-                <p></p>
+                <p>Whatsapp: <a href="tel:11968097004">(11)96804-7004</a></p>
+
 
             </div>
 
