--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h1>Gabriel Paiaro Rosa</h1>
 
         <p class="italic">Front-end Developer</p>
+        <p class="whatsapp">Whatsapp: <a href="tel:11968097004">(11) 96804-7004</a></p>
     </header>
         <div class="principal">
 
@@ -91,10 +92,6 @@
 
                 <p>HTML, CSS, JavaScript, Git, GitHub, Figma, Design responsivo,VsCode,VisualStudio.</p>
                 
-
-                <h2>Contato</h2>
-
-                <p>Whatsapp: <a href="tel:11968097004">(11)96804-7004</a></p>
             </div>
 
         </div>
