--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@
                 <h2>Habilidades</h2>
 
                 <p>HTML, CSS, JavaScript, Git, GitHub, Figma, Design responsivo,VsCode,VisualStudio.</p>
-                
+<div class="redes">
+                <h2>Redes</h2>
+
+                <p><a href="https://github.com/Paiaro">https://github.com/Paiaro</a></p>
+                <p><a href=""></a></p>
+            </div>
             </div>
 
         </div>
