--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div class="redes">
                 <h2>Redes</h2>
 
-                <p><a href="https://github.com/Paiaro">https://github.com/Paiaro</a></p>
+                <p><a target="_blank" href="https://github.com/Paiaro">https://github.com/Paiaro</a></p>
                 <p><a href=""></a></p>
             </div>
             </div>
