--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     Out - 2021 / Ago - 2023 <br>
 
-                    Responsável pela de manutenção de servidores e computadores. Instalação de software até a
+                    Responsável pela manutenção de servidores e computadores. Instalação de software até a
                     substituição de hardware e otimização de sistemas.
 
                 </p>
