--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <h2>Experiência profissional</h2>
 
-                <p><span class="bold">Técnico em manutenção de equipamentos de imformática</span> <br>
+                <p><span class="bold">Técnico em manutenção de equipamentos de informática</span> <br>
 
                     Out - 2021 / Ago - 2023 <br>
 
@@ -57,7 +57,7 @@
                 <h2>Cursos</h2>
 
                 <ul>
-                    <li><span class="bold">Analíse e desenvolvimento de sistemas</span> <br> Etec - Poá <br>2016</li>
+                    <li><span class="bold">Análise e desenvolvimento de sistemas</span> <br> Etec - Poá <br>2016</li>
                     <li><span class="bold">Programação Web</span> <br> Senac - Penha <br>2024</li>
                     <li><span class="bold">Photoshop (básico)</span> <br> Senac - Penha <br>2024</li>
 
