--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 
                     <p><a target="_blank" href="https://github.com/Paiaro">https://github.com/Paiaro</a></p>
                     <p><a href=""></a></p>
+                    <p><a target="_blank" href="https://www.linkedin.com/in/gabriel-paiaro-40abb8162/">https://www.linkedin.com/in/gabriel-paiaro-40abb8162/</a></p>
+                    <p><a href=""></a></p>
                 </div>
             </div>
 
