--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <p><a href=""></a></p>
                     <p><a target="_blank" href="https://www.linkedin.com/in/gabriel-paiaro-40abb8162/">https://www.linkedin.com/in/gabriel-paiaro-40abb8162/</a></p>
                     <p><a href=""></a></p>
-                    <p class="E-mail">E-mail: <a href="email:gabrielpaiarop@gmail.com">gabrielpaiarop@gmail.com</a></p>
+                    <p>E-mail: <a href="mailto:gabrielpaiarop@gmail.com">gabrielpaiarop@gmail.com</a></p>
                 </div>
             </div>
 
