--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <div class="img-container">
 
-                <img src="imagens/perfil.jpeg" alt="Gabriel Paiaro Rosa">
+                <img src="imagens/perfill.png" alt="Gabriel Paiaro Rosa">
 
             </div>
 
